<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">islamic prayer places</string>
    <string name="version10928">V 1.2.28</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Version">V.01.05.05</string>
    <string name="bt_next">Next</string>
    <string name="bt_gotologin" />
    <string name="bt_gotoregister" />
    <string name="bt_nologin">ใช้งานโดยไม่ล็อกอิน</string>
    <string name="bt_registerhere">Register Here</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="bt_login" />
    <string name="username">User Name</string>
    <string name="age">Age</string>
    <string name="bt_register" />
    <string name="bt_m1" />
    <string name="bt_m2" />
    <string name="bt_m3" />
    <string name="bt_m4" />
    <string name="bt_m5" />
    <string name="ic_setting" />
    <string name="ic_person" />
    <string name="ic_back" />
    <string name="ic" />
    <string name="ick" />
    <string name="icp" />
    <string name="ice" />
    <string name="ica" />
    <string name="bt_gtl" />
    <string name="user">User Name</string>
    <string name="ooooooo" />
    <string name="bt_menunologin1" />
    <string name="bt_menunologin2" />
    <string name="searchfield">ค้นหา</string>
    <string name="pic" />
    <string name="bt_comment" />
    <string name="room">จำนวนห้อง</string>
    <string name="roomperson">ความจุ</string>
    <string name="address">ที่อยู่</string>
    <string name="comment_input">แสดงความคิดเห็น</string>
    <string name="post">โพส</string>
    <string name="commentview" />
    <string name="user1">User1</string>
    <string name="comment1">ห้องสะอาดมากค่ะ</string>
    <string name="user2">User2</string>
    <string name="comment2">ห้องสวยมากค่ะ</string>
    <string name="user3">User3</string>
    <string name="user4">User4</string>
    <string name="user5">User5</string>
    <string name="user6">User6</string>
    <string name="comment3">แอปใช้งานง่ายและสะดวกมากค่ะ</string>
    <string name="comment4">ไปวันหยุดคนเยอะมากค่ะ</string>
    <string name="comment5">ห้องสะอาดมากเลยค่ะ</string>
    <string name="comment6">ห้องสะอาดมาก เอาไปเลย 5 ดาว</string>
    <string name="Date">03/08/2563</string>
    <string name="date2">10/08/2563</string>
    <string name="date3">12/08/2563</string>
    <string name="date4">15/08/2563</string>
    <string name="date5">17/08/2563</string>
    <string name="date6">19/08/2563</string>
    <string name="roomlslamic">ห้องละหมาดเดอะมอลล์บางกะปิ</string>
    <string name="addressthemall">บางกะปิ - เดอะมอลล์บางกะปิ แขวง คลองจั่น เขตบางกะปิ กรุงเทพมหานคร 10240</string>
    <string name="room11">"1ห้อง "</string>
    <string name="SH">ซุบฮิ</string>
    <string name="SR">ซูรูก</string>
    <string name="DA">ดุอริ</string>
    <string name="AR">อัสริ</string>
    <string name="MR">มักริบ</string>
    <string name="IS">อิชา</string>
    <string name="settingprofile" />
    <string name="settingaddplace" />
    <string name="settinghelp" />
    <string name="settingapp" />
    <string name="bt_logout" />
    <string name="tel">Tel. 093xxxxxxx</string>
    <string name="emailinput">xxxxxxx@email.com</string>
    <string name="ic_edit" />
    <string name="bt_addplace" />
    <string name="Roomper">รองรับ</string>
    <string name="tel1">Mobile</string>
    <string name="mobile">mobile</string>
    <string name="profilesetting">ตั้งค่าโปรไฟล์</string>
    <string name="Name">Name</string>
    <string name="Lastname">Lastname</string>
    <string name="last1name">Last Name</string>
    <string name="save" />
    <string name="_1">1</string>
    <string name="_10_15">10-15</string>
    <string name="perroom">คน / ห้อง</string>
    <string name="roomroom">ห้อง</string>
    <string name="favor" />
    <string name="Heart" />
    <string name="mark" />
    <string name="mapmapmap">แผนที่</string>
    <string name="megabangna" />
    <string name="mega">38 ถ. บางนาตราด ตำบล บางแก้ว อำเภอบางพลี สมุทรปราการ 10540 บริเวณชั้น 2 ฝั่งตรงข้ามโซนเมกา สมาร์ท คิดส์</string>
    <string name="central_westgate">ห้องละหมาด central westgate</string>
    <string name="_2">2</string>
    <string name="roommenwomen">ห้อง (ชาย/หญิง)</string>
    <string name="_199_199_1_2_11140_1">199 199/1-2 ถนน รัตนาธิเบศร์ ตำบล เสาธงหิน อำเภอบางใหญ่ นนทบุรี 11140 ชั้น 1 ใกล้ร้านจูบีลี่</string>
    <string name="namemega">ห้องละหมาดเมกาบางนา</string>
    <string name="helppp">ช่วยเหลือ</string>
    <string name="aboutapp">เกี่ยวกับแอปพลิเคชัน</string>
    <string name="number">number</string>
    <string name="nameplace">ชื่อสถานที่</string>
    <string name="picpic" />
    <string name="picpicpic">รูปภาพ (จำเป็น)</string>
    <string name="camera" />
    <string name="number1015">Number</string>
    <string name="_rongrup1room">รองรับ (จำนวนคนต่อ 1 ห้อง)</string>
    <string name="manyroom">จำนวนห้อง</string>
    <string name="icf" />
    <string name="calendar" />
    <string name="pleaselogin" />
    <string name="ic_delete" />
    <string name="loginface" />
    <string name="or">or</string>
    <string name="bangkok">กรุงเทพมหานครฯ</string>
    <string name="thai">ประเทศไทย</string>
    <string name="forgotpass">ลืมรหัสผ่าน</string>
    <string name="nayobye">ข้อตกลงในการให้บริการ</string>
    <string name="Opps">" นโยบายความเป็นส่วนตัว เป็นส่วนหนึ่งของข้อตกลงและเงื่อนไขของแอป พลิเคชันและครอบคลุมถึงการรักษาข้อมูลของผู้ใช้บริการ          โปรดอ่านนโยบายความเป็นส่วนตัวนี้อย่างระมัดระวัง เมื่อผู้ใช้บริการ เข้าถึงแอปพลิเคชัน เราจะถือว่าผู้ใช้บริการได้อ่านและยอมรับนโยบายความ เป็นส่วนตัวนี้ และยินยอมให้ใช้ข้อมูลดังต่อไปนี้         ข้อมูลที่เราเก็บรวบรวม ผู้ดูแลระบบจะต้องเก็บรวบรวมข้อมูลเพื่อการให้ บริการที่ดีขึ้นแก่ผู้ใช้บริการของเราทั้งหมด         ข้อมูลอุปกรณ์ ผู้ดูแลระบบจะรวบรวมข้อมูลเฉพาะของอุปกรณ์ เช่น ระบบปฏิบัติการ ชื่ออุปกรณ์ ชื่อรุ่นอุปกรณ์ หมายเลข IMEI หมายเลข Serial ที่อยู่ IP บัญชีผู้ใช้ หมายเลขโทรศัพท์ และอื่นๆ จะถูกนำมาใช้สำหรับการให้ บริการที่ดีขึ้นและเพื่อระบุตัวตนและการป้องกันของการใช้บริการในทางที่ ไม่เหมาะสม         ข้อมูลตำแหน่ง เมื่อผู้ใช้บริการอนุญาตให้เข้าถึง บริการค้นหาตำแหน่งที่ตั้ง ในแอปพลิเคชันนั้นๆ ผู้พัฒนาแอปพลิเคชันหรือเครือข่ายโฆษณา อาจมีการจัดเก็บ หรือส่งข้อมูลตำแหน่งที่ตั้งโดยประมาณของผู้ใช้บริการ เพื่อบริการที่ดีของแอปพลิเคชัน หรือเพื่อจัดให้มีโฆษณาที่เป็นประโยชน์มากยิ่งขึ้นต่อผู้ใช้บริการ         ความปลอดภัยของข้อมูล ผู้ดูแลระบบจะรักษาความปลอดภัยของข้อมูล แต่ โปรดทราบว่าแม้จะพยายามปกป้องข้อมูลแต่ไม่มีมาตรการรักษาความปลอดภัยข้อมูล ใด สามารถรับประกันความปลอดภัน 100% ตลอดเวลา        การแบ่งปันข้อมูลข้องผู้ใช้บริการ ผู้ดูแลระบบจะไม่ขายหรือให้เช่าหมายเลข โทรศัพท์มือถือและอีเมลของผู้ใช้บริการ เราจะใช้หรือเปิดเผยข้อมูลส่วนบุคคลของ ผู้ใช้บริการในขณะที่เราเชื่อข้อมูลนั้นเป็นสิ่งจำเป็น        1.เพื่อตอบสนองคำขอของผู้ใช้บริการและการสื่อสารกับผู้ใช้บริการแอปพลิเคชัน        2.เพื่อจัดหาการบริการที่ดีของเราให้แก่ผู้ใช้บริการแอปพลิเคชัน        3.เพื่อเป็นการบังคับใช้ข้อตกลงและเงื่อนไขในการให้บริการของแอปพลิเคชัน        4.เพื่อป้องกันความปลอดภัยของข้อมูลส่วนบุคคล        5.เพื่อให้สอดคล้องกับกฎหมายหรือตอบสนองต่อกระบวนการทางกฎหมาย นโยบายความเป็นส่วนตัวนี้อาจมีการปรับปรุงแก้ไขเป็นระยะๆ โดยไม่ต้องแจ้งผู้ใช้ บริการทราบล่วงหน้าและจะมีผลบังคับใช้ทันทีหากผู้ใช้บริการยังคงใช้บริการแอปพลิ เคชันนี้ ถือว่าผู้ใช้บริการตกลงนโยบายความเป็นส่วนตัวและการปรับปรุงแก้ไขนี้ทันที"</string>
    <string name="g_star">ให้ดาว</string>
    <string name="Rating">Rating</string>
    <string name="_30_2563">นโยบายความเป็นส่วนตัวนี้ เริ่มใช้วันที่ 30 กันยายน 2563</string>
    <string name="imei_serial_ip_100_1_2_3_4_5">นโยบายความเป็นส่วนตัว เป็นส่วนหนึ่งของข้อตกลงและเงื่อนไขของแอปพลิเคชันและครอบคลุมถึงการรักษาข้อมูลของผู้ใช้บริการ โปรดอ่านนโยบายความเป็นส่วนตัวนี้อย่างระมัดระวัง เมื่อผู้ใช้บริการเข้าถึงแอปพลิเคชัน เราจะถือว่าผู้ใช้บริการได้อ่านและยอมรับนโยบายความเป็นส่วนตัวนี้ และยินยอมให้ใช้ข้อมูลดังต่อไปนี้ ข้อมูลที่เราเก็บรวบรวม ผู้ดูแลระบบจะต้องเก็บรวบรวมข้อมูลเพื่อการให้บริการที่ดีขึ้นแก่ผู้ใช้บริการของเราทั้งหมด ข้อมูลอุปกรณ์ ผู้ดูแลระบบจะรวบรวมข้อมูลเฉพาะของอุปกรณ์ เช่น ระบบปฏิบัติการ ชื่ออุปกรณ์ ชื่อรุ่นอุปกรณ์ หมายเลข IMEI หมายเลข Serialที่อยู่ IP บัญชีผู้ใช้ หมายเลขโทรศัพท์ และอื่นๆ จะถูกนำมาใช้สำหรับการให้บริการที่ดีขึ้นและเพื่อระบุตัวตนและการป้องกันของการใช้บริการในทางที่ไม่เหมาะสม ข้อมูลตำแหน่ง เมื่อผู้ใช้บริการอนุญาตให้เข้าถึง บริการค้นหาตำแหน่งที่ตั้งในแอปพลิเคชันนั้นๆ ผู้พัฒนาแอปพลิเคชันหรือเครือข่ายโฆษณา อาจมีการจัดเก็บหรือส่งข้อมูลตำแหน่งที่ตั้งโดยประมาณของผู้ใช้บริการ เพื่อบริการที่ดีของแอปพลิเคชันหรือเพื่อจัดให้มีโฆษณาที่เป็นประโยชน์มากยิ่งขึ้นต่อผู้ใช้บริการความปลอดภัยของข้อมูล ผู้ดูแลระบบจะรักษาความปลอดภัยของข้อมูล แต่ โปรดทราบว่าแม้จะพยายามปกป้องข้อมูลแต่ไม่มีมาตรการรักษาความปลอดภัยข้อมูลใด สามารถรับประกันความปลอดภัน 100% ตลอดเวลาการแบ่งปันข้อมูลข้องผู้ใช้บริการ ผู้ดูแลระบบจะไม่ขายหรือให้เช่าหมายเลขโทรศัพท์มือถือและอีเมลของผู้ใช้บริการ เราจะใช้หรือเปิดเผยข้อมูลส่วนบุคคลของผู้ใช้บริการในขณะที่เราเชื่อข้อมูลนั้นเป็นสิ่งจำเป็น 1.เพื่อตอบสนองคำขอของผู้ใช้บริการและการสื่อสารกับผู้ใช้บริการแอปพลิเคชัน 2.เพื่อจัดหาการบริการที่ดีของเราให้แก่ผู้ใช้บริการแอปพลิเคชัน 3.เพื่อเป็นการบังคับใช้ข้อตกลงและเงื่อนไขในการให้บริการของแอปพลิเคชัน 4.เพื่อป้องกันความปลอดภัยของข้อมูลส่วนบุคคล 5.เพื่อให้สอดคล้องกับกฎหมายหรือตอบสนองต่อกระบวนการทางกฎหมาย นโยบายความเป็นส่วนตัวนี้อาจมีการปรับปรุงแก้ไขเป็นระยะๆ โดยไม่ต้องแจ้งผู้ใช้บริการทราบล่วงหน้าและจะมีผลบังคับใช้ทันทีหากผู้ใช้บริการยังคงใช้บริการแอปพลิเคชันนี้ ถือว่าผู้ใช้บริการตกลงนโยบายความเป็นส่วนตัวและการปรับปรุงแก้ไขนี้ทันที</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="nomale">ไม่ระบุ</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="bt_3o" />
    <string name="รองรับ">รองรับ</string>
    <string name="timeroom">เวลา เปิด-ปิด</string>
    <string name="timeroomten">10:00 - 22:00</string>
    <string name="timetimecom">13.01</string>
    <string name="timepra">เวลาละหมาด</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_camera" tools:ignore="MissingTranslation">กล้อง</string>
    <string name="menu_gallery" tools:ignore="MissingTranslation">แกลเลอรี่</string>
    <string name="menu_remove" tools:ignore="MissingTranslation">ล้างข้อมูล</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="select_image" tools:ignore="MissingTranslation">select_image</string>
    <string name="unknown_location">unknown location</string>
    <string name="cancel">cancel</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
</resources>