<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        android:padding="@dimen/margin8dp"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <ImageView-->
<!--            android:id="@+id/logo4"-->
<!--            android:layout_width="112dp"-->
<!--            android:layout_height="83dp"-->
<!--            android:contentDescription="@string/welcome"-->
<!--            android:src="@drawable/logo_1"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.412" />-->

<!--        <TextView-->
<!--            android:id="@+id/logoname4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Islamic"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="#046057"-->
<!--            android:textSize="50sp"-->

<!--            android:textStyle="italic" />-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/logo4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/welcome"
            android:src="@drawable/logo_1"
            android:scaleType="fitXY"
            android:padding="@dimen/margin8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.412" />

        <LinearLayout
            android:layout_marginTop="@dimen/d12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logoname4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Islamic"
                android:textAlignment="center"
                android:textColor="#055E55"
                android:textSize="50sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#011917"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="prayer places"
                android:textColor="#158E83"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

        </LinearLayout>


    </LinearLayout>

    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/normal_edittext_blue"
        android:hint="@string/email"
        android:paddingLeft="@dimen/padding16dp"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="#ACACAC"
        android:textColorHighlight="#EAEAEA"
        android:textColorLink="#02FFC4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/normal_edittext_blue"
        android:hint="@string/password"
        android:paddingLeft="@dimen/padding16dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#DADADA"
        android:textColorHighlight="#EAEAEA"
        android:textColorLink="#00DFAB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <ImageView
        android:id="@+id/lock"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ick"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />


    <TextView
        android:id="@+id/registerhere"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:contentDescription="@string/bt_registerhere"
        android:foregroundTint="#E8E3E3"
        android:onClick="@string/bt_registerhere"
        android:text="@string/bt_registerhere"
        android:textColor="#0A650E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:contentDescription="@string/bt_registerhere"
        android:foregroundTint="#E8E3E3"
        android:onClick="@string/bt_registerhere"
        android:text="@string/forgotpass"
        android:textColor="@color/colorBlueCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <ImageView
        android:id="@+id/iconemail"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ic"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/registerhere">


        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_blue"
            android:paddingStart="@dimen/text_size_16"
            android:paddingEnd="@dimen/text_size_16"
            android:text="เข้าสู่ระบบ"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_size_16"
            android:background="@drawable/btn_blue"
            android:paddingStart="@dimen/text_size_16"
            android:paddingEnd="@dimen/text_size_16"
            android:text="สมัครสมาชิก"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


    <TextView
        android:id="@+id/or"
        android:layout_width="14dp"
        android:layout_height="23dp"
        android:contentDescription="@string/bt_registerhere"
        android:foregroundTint="#E8E3E3"
        android:onClick="@string/bt_registerhere"
        android:text="@string/or"
        android:textColor="#0A650E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <ImageView
        android:id="@+id/bt_loginface"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:contentDescription="@string/loginface"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        app:srcCompat="@drawable/group_138" />

</androidx.constraintlayout.widget.ConstraintLayout>